[metadata]
name = fireprox
version = 1.0.0
author = ustayready
license = GPL-3.0
description = A tool to dump a git repository from a website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/fireprox

[options]
py_modules = fire
python_requires = >=3.0
install_requires =
    boto3
    tldextract
    tzlocal
    bs4
    lxml

[options.entry_points]
console_scripts =
    fireprox = fire:main